objects/CTI_Field_Value_Mapping__mdt.object
<CustomObject>
    <description>Maps the actual CTI variables&apos; values to SObject field values</description>
    <fields>
        <fullName>CTI_Value__c</fullName>
        <description>The value of the CTI variable</description>
        <label>CTI Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <description>Value to set the sobject field</description>
        <label>Field Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Mapping__c</fullName>
        <description>The parent that provides the mapping from CTI variable to sobject field</description>
        <label>Field Value Mapping</label>
        <referenceTo>CTI_Variable_Mapping__mdt</referenceTo>
        <relationshipLabel>Field Value Mapping</relationshipLabel>
        <relationshipName>CTI_Field_Value_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>CTI Field Value Mapping</label>
    <listViews>
        <fullName>All_Useful</fullName>
        <columns>MasterLabel</columns>
        <columns>Parent_Mapping__c</columns>
        <columns>CTI_Value__c</columns>
        <columns>Field_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Useful</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>CTI Field Value Mappings</pluralLabel>
</CustomObject>